<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

            <TextView
                    android:id="@+id/item_arbeitsverhaeltnis_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="20 Nov 2019" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon" />

            <TextView
                    android:id="@+id/title_arbeitsverhaeltnis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dip"
                    android:paddingEnd="5dip"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Some title which is " />


        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

            <TableLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:stretchColumns="1">

                <TableRow android:id="@+id/table_row_leistungserbringer">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/leistungserbringer" />

                    <TextView
                            android:id="@+id/item_arbeitsverhaeltnis_leistungserbringer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Beutel" />


                </TableRow>

                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/leistungsnehmer" />

                    <TextView
                            android:id="@+id/item_arbeitsverhaeltnis_leistungsnehmer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Rapp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical|end">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kosten" />

                <TextView
                        android:id="@+id/item_arbeitsverhaeltnis_kosten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dip"
                        android:paddingEnd="5dip"
                        tools:text="500 €" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>